--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <tr>
             <td class="coluna-esq">Fotografia</td>
             <td class="coluna-dir">
-                José Luís Ávila Silveira/Pedro Noronha e Costa; Observatório do Mar dos Açores; Secretaria Regional do Ambiente e Ação Climática; Carlos Duarte; Peter Museu; Helder Afonso; Amigos do Farol dos Capelinhos; AvistaVulcão - Casa da Missão; Azores UNESCO Global Geopark.
+                Graça Moniz e Almeida; José Luís Ávila Silveira/Pedro Noronha e Costa; Observatório do Mar dos Açores; Secretaria Regional do Ambiente e Ação Climática; Carlos Duarte; Peter Museu; Helder Afonso; Amigos do Farol dos Capelinhos; AvistaVulcão - Casa da Missão; Azores UNESCO Global Geopark.
             </td>
         </tr>
 
